2003-04-14    Jimmy Yen <jimmy@yen.tp>

	* Small KeepShape fix.
	* Cleaned up xf86WcmSendEvents.
	* Fallback case in device selection code.

2003-04-08    John E. Joganic <john@joganic.com>

	* Fixed USB tilt ranges.
	* Exploded out serial tablet initialization.

2003-04-07    John E. Joganic <john@joganic.com>

	* Fixed bug in tilt filter.
	* MaxZ determined at tablet detection
	* Changed pressure code; all values positive.
	* Added channel code, device proximity bound to channel

2003-04-07    Jimmy Yen <jimmy@yen.tp>

	* Set resolutions for USB tablets.

2003-04-06    John E. Joganic <john@joganic.com>

	* Refactored xf86Wacom.c into separate files.

2003-04-02    John E. Joganic <john@joganic.com>

	* Added J. Yen's "misc fixes" patch to xf86Wacom.c
	* Added J. Paisley's "reattach" patch to evdev.c

2003-03-31    John E. Joganic <john@joganic.com>

	* Added mousedev.c with fix to ignore wacom

2003-03-22    John E. Joganic <john@joganic.com>

	* Added ncurses detection.
	* Cleaned up output of xidump.
	* Added Dean Townsley's ISDV4 patch.

2003-03-08    John E. Joganic <john@joganic.com>

	* Added curses functionality to xidump.c, now default
	* xidump now builds by default

2003-03-07    John E. Joganic <john@joganic.com>

	* Added tabletdev.c framework (based on mousedev.c)
	* Added device list to xidump.c including class info
	* Added raw event notification

2003-03-06    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's suppress patch
	* Added evdev.c to project, contains Jonathan Paisley's oops patch
	* Added input.c to project

2003-02-23    John E. Joganic <john@joganic.com>

	* Added xidump and gtk config options

2003-02-22    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's multi-monitor patch
	* Added build option for Xfree86 v3.x; testing only
	* Applied Jimmy Yen's origin patch

2003-02-12    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's eraser patch for PL in wacom.c